# Automated_Email_News_Feed

./: .gitignore  design.txt  main.py  news.py  pyproject.toml  scratch.py  scratch_datetime.py  scratch_requests.py  scratch_zip_for_loop.py
